# api_docs.json
@@ -4013,6 +4013,31 @@
         }
       },
       {
+        "action": "GET",
+        "uri": "\/tags\/exact",
+        "authentication" : true,
+        "description": "Getting a tag by exact name",
+        "headers": {
+          "Accept": "application\/vnd.hairfolio.v1",
+          "Content-Type": "application\/json"
+        },
+        "params" : {
+          "type" : "string",
+          "description" : "The tag name",
+          "required" : true
+        },
+        "response" : {
+          "tag":
+            {
+              "id": 360,
+              "created_at": "2016-12-11T18:14:29.339Z",
+              "name": "voluptatem",
+              "last_photo" : "https://jkfslf.com/image.png",
+              "url": null
+            }
+        }
+      },
+      {
         "action": "POST",
         "uri": "\/tags",
         "authentication" : true,
